cmake_minimum_required(VERSION 2.8)

project(Leetcode LANGUAGES CXX)

add_subdirectory(BinaryTreeLevelOrderTraversal)
add_subdirectory(FibonacciNumber)
add_subdirectory(FindCommonCharacters)
add_subdirectory(ImplementQueueUsingStacks)
add_subdirectory(ReverseString)
add_subdirectory(SortArray)
add_subdirectory(ValidParentheses)